<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_kids"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/greetingQuestionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="28dp" />

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/trueButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:text="@string/quiz_true_button" />

        <Button
            android:id="@+id/falseButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quiz_false_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_circle_left"
            android:contentDescription="@string/quiz_prev_button"
            android:cropToPadding="true"
            android:padding="25dp"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_circle_right"
            android:contentDescription="@string/quiz_next_button"
            android:cropToPadding="true"
            android:padding="25dp"
            android:scaleType="fitXY"
            android:text="@string/quiz_next_button" />
    </LinearLayout>


</LinearLayout>